@@ -9,6 +9,7 @@ Jump Start Changelog
 * Added unique HTML ID's to sections of custom layouts like `page-slug-section-1`.
 * Added system to check if saved theme options match selected theme base.
 * Added Portfolios plugin to recommended plugins when installing theme.
+* Added easy integration for FontAwesome icons in header text option.
 * Expanded options for divider component.
 * Fixed responsiveness of Promo Box element.
 * Fixed issues with new Footer Sync feature and using Columns element. Make sure to update Layout Builder plugin to v2.0.2, also.
